@@ -1,3 +1,7 @@
+2003-09-07	ujwal
+
+    * Fixed printSelection where unnecessary white space being printed.
+
 2003-09-07	fabian
 
     * Fixed some memory leaks. Cleaned up the alloc/dealloc code to make
